--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
 		    <version>${mockito.version}</version>
 		    <scope>test</scope>
 		  </dependency>
+		  
+		  <dependency>
+		   <groupId>org.mockito</groupId>
+		   <artifactId>mockito-inline</artifactId>
+		   <version>4.5.1</version> <!-- o la versión más reciente -->
+		   <scope>test</scope>
+		  </dependency>
+
 
 	</dependencies>
 	
